# comfyui-deepseek-r1

./: README.md  __init__.py  azw_nodes.py  pyproject.toml  r1大藏经版图灵测结果数据集.rar  requirements.txt  zw_tool.py
.github/workflows/: publish.yml
workflows/: deep-seek-r1-zwai.json  qwen-vl.json  qwen.json  r1智障问题测试数据集zw双语版.txt
