[project]
name = "comfyui-deepseek-r1"
description = "Nodes related to deepseek-r1"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["transformers>=4.37.0"]

[project.urls]
Repository = "https://github.com/ziwang-com/comfyui-deepseek-r1"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "zwai"
DisplayName = "ComfyUI-DeepSeek-R1"
Icon = ""